# nhanes-autoanalyst

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PATCH_README.md  README.md  app.py  pyproject.toml
docs/: v02_data_pipeline.md
examples/: v02_minimal_manifest.yaml
src/nhanes_autoanalyst/: __init__.py  cli.py  cli_data.py  manifest.py  nhanes_data.py
tests/: test_nhanes_data.py
